--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,7 @@
-#one:
-#  email: 'one@test.com' 
-#  password: 'test'
-#  password_confirmation: 'test'
-#
-#two:
-#  email: 'two@test.com' 
-#  password: 'test'
-#  password_confirmation: 'test'
+user_one:
+  email: 'one@test.com' 
+  password_digest: <%= BCrypt::Password.create('test', cost: 4) %>
+
+user_two:
+  email: 'two@test.com' 
+  password_digest: <%= BCrypt::Password.create('test', cost: 4) %>
